0.1.9 RELEASE SNAPSHOT commit
Many fixes and improvements. Please see changelog, github readme and official documentation.