@@ -56,6 +56,8 @@ import uk.ac.bbsrc.tgac.miso.core.service.naming.RequestManagerAwareNamingScheme
 
 import java.io.*;
 import java.util.*;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 /**
  * uk.ac.bbsrc.tgac.miso.core.util
@@ -69,6 +71,9 @@ import java.util.*;
 public class FormUtils {
   protected static final Logger log = LoggerFactory.getLogger(FormUtils.class);
 
+  private static final Pattern digitPattern = Pattern.compile("(^[0-9]+)");
+  private static final Pattern samplePattern = Pattern.compile("([A-z0-9]+)_S([A-z0-9]+)_(.*)");
+
   public static void createSampleInputSpreadsheet(Collection<Sample> samples, File outpath) throws Exception {
     Collections.sort(new ArrayList<Sample>(samples), new AliasComparator(Sample.class));
 
@@ -80,7 +85,6 @@ public class FormUtils {
         FileOutputStream fileOut = new FileOutputStream(outpath);
         oDoc.write(fileOut);
         fileOut.close();
-        //return oDoc;
       }
       else {
         throw new IOException("Could not read from resource.");
@@ -91,7 +95,6 @@ public class FormUtils {
       if (in != null) {
         OdfSpreadsheetDocument oDoc = OdfSpreadsheetDocument.loadDocument(in);
         oDoc.save(outpath);
-        //return oDoc;
       }
       else {
         throw new IOException("Could not read from resource.");
@@ -99,6 +102,742 @@ public class FormUtils {
     }
     else {
       throw new IllegalArgumentException("Can only produce bulk input forms in ods or xlsx formats.");
+    }
+  }
+
+  public static void createPlateInputSpreadsheet(File outpath) throws Exception {
+    InputStream in = null;
+    if (outpath.getName().endsWith(".xlsx")) {
+      in = FormUtils.class.getResourceAsStream("/forms/ods/plate_input.xlsx");
+      if (in != null) {
+        XSSFWorkbook oDoc = new XSSFWorkbook(in);
+        FileOutputStream fileOut = new FileOutputStream(outpath);
+        oDoc.write(fileOut);
+        fileOut.close();
+      }
+      else {
+        throw new IOException("Could not read from resource.");
+      }
+    }
+    else if (outpath.getName().endsWith(".ods")) {
+      in = FormUtils.class.getResourceAsStream("/forms/ods/plate_input.ods");
+      if (in != null) {
+        OdfSpreadsheetDocument oDoc = OdfSpreadsheetDocument.loadDocument(in);
+        oDoc.save(outpath);
+      }
+      else {
+        throw new IOException("Could not read from resource.");
+      }
+    }
+    else {
+      throw new IllegalArgumentException("Can only produce plate input forms in ods or xlsx formats.");
+    }
+  }
+
+  //private static Map<String, Pool<Plate<LinkedList<Library>, Library>>> process384PlateInputODS(OdfSpreadsheetDocument oDoc, User u, RequestManager manager, MisoNamingScheme<Library> libraryNamingScheme) throws Exception {
+  private static Map<String, PlatePool> process384PlateInputODS(OdfSpreadsheetDocument oDoc, User u, RequestManager manager, MisoNamingScheme<Library> libraryNamingScheme) throws Exception {
+    ((RequestManagerAwareNamingScheme)libraryNamingScheme).setRequestManager(manager);
+
+    List<Sample> samples = new ArrayList<Sample>();
+    OdfTable oTable = oDoc.getTableList().get(0);
+
+    //process global headers
+    OdfTableCell pairedCell = oTable.getCellByPosition("A2");
+    boolean paired = false;
+    if (pairedCell.getBooleanValue() != null) {
+      paired = pairedCell.getBooleanValue();
+      log.info("Got paired: " + paired);
+    }
+
+    OdfTableCell platformCell = oTable.getCellByPosition("B2");
+    PlatformType pt = null;
+    if (!"".equals(platformCell.getStringValue())) {
+      pt = PlatformType.get(platformCell.getStringValue());
+    }
+    if (pt == null) {
+      throw new InputFormException("Cannot resolve Platform type from: '" + platformCell.getStringValue() +"'");
+    }
+    else {
+      log.info("Got platform type: " + pt.getKey());
+    }
+
+    OdfTableCell typeCell = oTable.getCellByPosition("C2");
+    LibraryType lt = null;
+    if (!"".equals(typeCell.getStringValue())) {
+      String[] split = typeCell.getStringValue().split("-");
+      String plat = split[0];
+      String type = split[1];
+      if (platformCell.getStringValue().equals(plat)) {
+        lt = manager.getLibraryTypeByDescriptionAndPlatform(type, pt);
+      }
+      else {
+        throw new InputFormException("Selected library type '"+typeCell.getStringValue()+"' doesn't match platform type: '" + platformCell.getStringValue() +"'");
+      }
+    }
+    if (lt == null) {
+      throw new InputFormException("Cannot resolve Library type from: '" + typeCell.getStringValue() +"'");
+    }
+    else {
+      log.info("Got library type: " + lt.getDescription());
+    }
+
+    OdfTableCell selectionCell = oTable.getCellByPosition("D2");
+    LibrarySelectionType ls = null;
+    if (!"".equals(selectionCell.getStringValue())) {
+      ls = manager.getLibrarySelectionTypeByName(selectionCell.getStringValue());
+    }
+    if (ls == null) {
+      throw new InputFormException("Cannot resolve Library Selection type from: '" + selectionCell.getStringValue() +"'");
+    }
+    else {
+      log.info("Got library selection type: " + ls.getName());
+    }
+
+    OdfTableCell strategyCell = oTable.getCellByPosition("E2");
+    LibraryStrategyType lst = null;
+    if (!"".equals(strategyCell.getStringValue())) {
+      lst = manager.getLibraryStrategyTypeByName(strategyCell.getStringValue());
+    }
+    if (lst == null) {
+      throw new InputFormException("Cannot resolve Library Strategy type from: '" + strategyCell.getStringValue() +"'");
+    }
+    else {
+      log.info("Got library strategy type: " + lst.getName());
+    }
+
+    OdfTableCell plateBarcodeCell = oTable.getCellByPosition("F2");
+    String plateBarcode = null;
+    if (!"".equals(plateBarcodeCell.getStringValue())) {
+      plateBarcode = plateBarcodeCell.getStringValue();
+    }
+    if (plateBarcode == null) {
+      throw new InputFormException("Cannot resolve plate barcode from: '" + plateBarcodeCell.getStringValue() +"'");
+    }
+    else {
+      log.info("Got plate parcode: " + plateBarcode);
+    }
+
+    //process entries
+    Simple384WellPlate libraryPlate = null;
+    //Map<String, Pool<Plate<LinkedList<Library>, Library>>> pools = new HashMap<String, Pool<Plate<LinkedList<Library>, Library>>>();
+    Map<String, PlatePool> pools = new HashMap<String, PlatePool>();
+    for (OdfTableRow row : oTable.getRowList()) {
+      int ri = row.getRowIndex();
+      if (ri > 3) {
+        // Ax - plate position
+        OdfTableCell platePosCell = oTable.getCellByPosition(0, ri);
+        if (!"".equals(platePosCell.getStringValue()) && libraryPlate == null) {
+          //plated libraries - process as plate
+          libraryPlate = new Simple384WellPlate();
+          libraryPlate.setIdentificationBarcode(plateBarcode);
+          libraryPlate.setCreationDate(new Date());
+        }
+
+        //cell defs
+        OdfTableCell sampleAliasCell = oTable.getCellByPosition(1, ri);
+
+        Sample s = null;
+        if (!"".equals(sampleAliasCell.getStringValue())) {
+          Collection<Sample> ss = manager.listSamplesByAlias(sampleAliasCell.getStringValue());
+          if (!ss.isEmpty()) {
+            if (ss.size() == 1) {
+              s = ss.iterator().next();
+              log.info("Got sample: " + s.getAlias());
+            }
+            else {
+              throw new InputFormException("Multiple samples retrieved with this alias: '"+sampleAliasCell.getStringValue()+"'. Cannot process.");
+            }
+          }
+          else {
+            throw new InputFormException("No such sample '"+sampleAliasCell.getStringValue()+"'in database. Samples need to be created before using the form input functionality");
+          }
+        }
+        else {
+          log.info("Blank sample row found. Ending import.");
+          break;
+        }
+
+        //sample OK - good to go
+        if (s != null) {
+          OdfTableCell entityIDCell = oTable.getCellByPosition(2, ri);
+          OdfTableCell poolNumberCell = oTable.getCellByPosition(3, ri);
+          OdfTableCell sampleQcCell = oTable.getCellByPosition(4, ri);
+          //OdfTableCell sampleAmountCell = oTable.getCellByPosition(5, ri);
+          //OdfTableCell sampleWaterAmountCell = oTable.getCellByPosition(6, ri);
+          OdfTableCell barcodeKitCell = oTable.getCellByPosition(7, ri);
+          OdfTableCell barcodeTagsCell = oTable.getCellByPosition(8, ri);
+          OdfTableCell libraryQcCell = oTable.getCellByPosition(9, ri);
+          OdfTableCell libraryQcInsertSizeCell = oTable.getCellByPosition(10, ri);
+          OdfTableCell libraryQcMolarityCell = oTable.getCellByPosition(11, ri);
+          OdfTableCell libraryQcPassFailCell = oTable.getCellByPosition(12, ri);
+          //OdfTableCell libraryAmountCell = oTable.getCellByPosition(13, ri);
+          //OdfTableCell libraryWaterAmountCell = oTable.getCellByPosition(14, ri);
+          //OdfTableCell dilutionQcCell = oTable.getCellByPosition(15, ri);
+          OdfTableCell dilutionMolarityCell = oTable.getCellByPosition(16, ri);
+          //OdfTableCell dilutionAmountCell = oTable.getCellByPosition(17, ri);
+          //OdfTableCell dilutionWaterAmountCell = oTable.getCellByPosition(18, ri);
+          OdfTableCell poolQcCell = oTable.getCellByPosition(19, ri);
+          //OdfTableCell poolAverageInsertSizeCell = oTable.getCellByPosition(20, ri);
+          OdfTableCell poolConvertedMolarityCell = oTable.getCellByPosition(21, ri);
+
+          //add pool, if any
+          if (!"".equals(poolNumberCell.getStringValue())) {
+            if (!pools.containsKey(poolNumberCell.getStringValue())) {
+              PlatePool pool = new PlatePool();
+              pool.setAlias(poolNumberCell.getStringValue());
+              pool.setPlatformType(pt);
+              pool.setReadyToRun(true);
+              pool.setCreationDate(new Date());
+              pools.put(poolNumberCell.getStringValue(), pool);
+              log.info("Added pool: " + poolNumberCell.getStringValue());
+            }
+          }
+
+          //process sample QC
+          if (!"".equals(sampleQcCell.getStringValue())) {
+            try {
+              SampleQC sqc = new SampleQCImpl();
+              sqc.setSample(s);
+              sqc.setResults(Double.valueOf(sampleQcCell.getStringValue()));
+              sqc.setQcCreator(u.getLoginName());
+              sqc.setQcDate(new Date());
+              sqc.setQcType(manager.getSampleQcTypeByName("Picogreen"));
+              if (!s.getSampleQCs().contains(sqc)) {
+                s.addQc(sqc);
+                log.info("Added sample QC: " + sqc.toString());
+              }
+            }
+            catch (NumberFormatException nfe) {
+              throw new InputFormException("Supplied Sample QC concentration for sample '"+sampleAliasCell.getStringValue()+"' is invalid", nfe);
+            }
+          }
+
+          //if (!"".equals(libraryQcCell.getStringValue())) {
+          if (barcodeKitCell.getStringValue() != null && barcodeTagsCell.getStringValue() != null) {
+            //create library
+            Library library = new LibraryImpl();
+            library.setSample(s);
+
+            Matcher mat = samplePattern.matcher(s.getAlias());
+            if (mat.matches()) {
+              String libAlias = plateBarcode+"_"+"L"+mat.group(2)+"-"+platePosCell.getStringValue()+"_"+entityIDCell.getStringValue();
+              //String libAlias = libraryNamingScheme.generateNameFor("alias", library);
+              //library.setAlias(libAlias);
+
+              library.setAlias(libAlias);
+              library.setSecurityProfile(s.getSecurityProfile());
+              library.setDescription(s.getDescription());
+              library.setCreationDate(new Date());
+              library.setPlatformName(pt.name());
+              library.setLibraryType(lt);
+              library.setLibrarySelectionType(ls);
+              library.setLibraryStrategyType(lst);
+              library.setPaired(paired);
+
+              if (!"".equals(libraryQcMolarityCell.getStringValue())) {
+                int insertSize = 0;
+                try {
+                  String bp = libraryQcInsertSizeCell.getStringValue();
+                  insertSize = Integer.valueOf(digitPattern.matcher(bp).group(1));
+                }
+                catch (NumberFormatException nfe) {
+                  throw new InputFormException("Supplied Library insert size for library '"+libAlias+"' ("+s.getAlias()+") is invalid", nfe);
+                }
+
+                try {
+                  LibraryQC lqc = new LibraryQCImpl();
+                  lqc.setLibrary(library);
+                  lqc.setInsertSize(insertSize);
+                  lqc.setResults(Double.valueOf(libraryQcMolarityCell.getStringValue()));
+                  lqc.setQcCreator(u.getLoginName());
+                  lqc.setQcDate(new Date());
+                  lqc.setQcType(manager.getLibraryQcTypeByName("Picogreen"));
+                  if (!library.getLibraryQCs().contains(lqc)) {
+                    library.addQc(lqc);
+                    log.info("Added library QC: " + lqc.toString());
+                  }
+
+                  if (insertSize == 0 && lqc.getResults() == 0) {
+                    library.setQcPassed(false);
+                  }
+                  else {
+                    //TODO check libraryQcPassFailCell?
+                    library.setQcPassed(true);
+                  }
+                }
+                catch (NumberFormatException nfe) {
+                  throw new InputFormException("Supplied Library QC concentration for library '"+libAlias+"' ("+s.getAlias()+") is invalid", nfe);
+                }
+              }
+
+              if (!"".equals(barcodeKitCell.getStringValue())) {
+                Collection<TagBarcode> bcs = manager.listAllTagBarcodesByStrategyName(barcodeKitCell.getStringValue());
+                if (!bcs.isEmpty()) {
+                  String tags = barcodeTagsCell.getStringValue();
+                  if (!"".equals(tags)) {
+                    HashMap<Integer, TagBarcode> tbs = new HashMap<Integer, TagBarcode>();
+                    if (tags.contains("-")) {
+                      String[] splits = tags.split("-");
+                      int count = 1;
+                      for (String tag : splits) {
+                        for (TagBarcode tb : bcs) {
+                          if (tb.getName().equals(tag)) {
+                            //set tag barcodes
+                            tbs.put(count, tb);
+                            count++;
+                          }
+                        }
+                      }
+                    }
+                    else {
+                      for (TagBarcode tb : bcs) {
+                        if (tb.getName().equals(tags)) {
+                          //set tag barcode
+                          tbs.put(1, tb);
+                        }
+                      }
+                    }
+
+                    library.setTagBarcodes(tbs);
+                  }
+                  else {
+                    throw new InputFormException("Barcode Kit specified but no tag barcodes entered for: '"+sampleAliasCell.getStringValue()+"'.");
+                  }
+                }
+                else {
+                  throw new InputFormException("No tag barcodes associated with this kit definition: '"+barcodeKitCell.getStringValue()+"'.");
+                }
+              }
+
+              /*
+              if (!"".equals(dilutionMolarityCell.getStringValue())) {
+                try {
+                  LibraryDilution ldi = new LibraryDilution();
+                  ldi.setLibrary(library);
+                  ldi.setSecurityProfile(library.getSecurityProfile());
+                  ldi.setConcentration(Double.valueOf(dilutionMolarityCell.getStringValue()));
+                  ldi.setCreationDate(new Date());
+                  ldi.setDilutionCreator(u.getLoginName());
+                  if (!library.getLibraryDilutions().contains(ldi)) {
+                    library.addDilution(ldi);
+                    log.info("Added library dilution: " + ldi.toString());
+                  }
+
+                  Pool<Plate<LinkedList<Library>, Library>> p = pools.get(poolNumberCell.getStringValue());
+                  if (p != null) {
+                    p.addPoolableElement(ldi);
+                    log.info("Added library dilution to pool: " + p.toString());
+                  }
+                }
+                catch (NumberFormatException nfe) {
+                  throw new InputFormException("Supplied LibraryDilution concentration for library '"+libAlias+"' ("+s.getAlias()+") is invalid", nfe);
+                }
+              }
+              */
+
+              if (!"".equals(poolConvertedMolarityCell.getStringValue())) {
+                Pool<Plate<LinkedList<Library>, Library>> p = pools.get(poolNumberCell.getStringValue());
+                if (p != null) {
+                  log.debug("Retrieved pool "+poolNumberCell.getStringValue());
+                  try {
+                    double d = Double.valueOf(poolConvertedMolarityCell.getStringValue());
+                    p.setConcentration(d);
+                  }
+                  catch (NumberFormatException nfe) {
+                    throw new InputFormException("Supplied pool concentration for pool '"+poolNumberCell.getStringValue()+"' is invalid", nfe);
+                  }
+                }
+              }
+
+              log.info("Added library: " + library.toString());
+
+              if (!"".equals(platePosCell.getStringValue()) && libraryPlate != null) {
+                //libraryPlate.setElement(platePosCell.getStringValue(), library);
+                libraryPlate.addElement(library);
+                log.info("Added library " + library.getAlias() + " to " + platePosCell.getStringValue());
+              }
+
+              samples.add(s);
+
+              Pool<Plate<LinkedList<Library>, Library>> p = pools.get(poolNumberCell.getStringValue());
+              if (p != null && !p.getPoolableElements().contains(libraryPlate)) {
+                p.addPoolableElement(libraryPlate);
+                log.info("Added plate to pool: " + p.toString());
+              }
+            }
+            else {
+              log.error("Cannot generate library alias from specified parent sample alias. Does it match the required schema?");
+            }
+          }
+        }
+      }
+    }
+    log.info("Done");
+    return pools;
+  }
+
+  //private static Map<String, Pool<Plate<LinkedList<Library>, Library>>> process384PlateInputXLSX(XSSFWorkbook wb, User u, RequestManager manager, MisoNamingScheme<Library> libraryNamingScheme) throws Exception {
+  private static Map<String, PlatePool> process384PlateInputXLSX(XSSFWorkbook wb, User u, RequestManager manager, MisoNamingScheme<Library> libraryNamingScheme) throws Exception {
+    ((RequestManagerAwareNamingScheme)libraryNamingScheme).setRequestManager(manager);
+
+    List<Sample> samples = new ArrayList<Sample>();
+    XSSFSheet sheet = wb.getSheetAt(0);
+    int rows = sheet.getPhysicalNumberOfRows();
+
+    XSSFRow glrow = sheet.getRow(1);
+
+    //process global headers
+    XSSFCell pairedCell = glrow.getCell(0);
+    boolean paired = pairedCell.getBooleanCellValue();
+    log.info("Got paired: " + paired);
+
+    XSSFCell platformCell = glrow.getCell(1);
+    PlatformType pt = null;
+    if (getCellValueAsString(platformCell) != null) {
+      pt = PlatformType.get(getCellValueAsString(platformCell));
+    }
+    if (pt == null) {
+      throw new InputFormException("Cannot resolve Platform type from: '" + getCellValueAsString(platformCell) +"'");
+    }
+    else {
+      log.info("Got platform type: " + pt.getKey());
+    }
+
+    XSSFCell typeCell = glrow.getCell(2);
+    LibraryType lt = null;
+    if (getCellValueAsString(typeCell) != null) {
+      String[] split = getCellValueAsString(typeCell).split("-");
+      String plat = split[0];
+      String type = split[1];
+      if (getCellValueAsString(platformCell).equals(plat)) {
+        lt = manager.getLibraryTypeByDescriptionAndPlatform(type, pt);
+      }
+      else {
+        throw new InputFormException("Selected library type '"+getCellValueAsString(typeCell)+"' doesn't match platform type: '" + getCellValueAsString(platformCell) +"'");
+      }
+    }
+    if (lt == null) {
+      throw new InputFormException("Cannot resolve Library type from: '" + getCellValueAsString(typeCell) +"'");
+    }
+    else {
+      log.info("Got library type: " + lt.getDescription());
+    }
+
+    XSSFCell selectionCell = glrow.getCell(3);
+    LibrarySelectionType ls = null;
+    if (getCellValueAsString(selectionCell) != null) {
+      ls = manager.getLibrarySelectionTypeByName(getCellValueAsString(selectionCell));
+    }
+    if (ls == null) {
+      throw new InputFormException("Cannot resolve Library Selection type from: '" + getCellValueAsString(selectionCell) +"'");
+    }
+    else {
+      log.info("Got library selection type: " + ls.getName());
+    }
+
+    XSSFCell strategyCell = glrow.getCell(4);
+    LibraryStrategyType lst = null;
+    if (getCellValueAsString(strategyCell) != null) {
+      lst = manager.getLibraryStrategyTypeByName(getCellValueAsString(strategyCell));
+    }
+    if (lst == null) {
+      throw new InputFormException("Cannot resolve Library Strategy type from: '" + getCellValueAsString(strategyCell) +"'");
+    }
+    else {
+      log.info("Got library strategy type: " + lst.getName());
+    }
+
+    XSSFCell plateBarcodeCell = glrow.getCell(5);
+    String plateBarcode = null;
+    if (getCellValueAsString(plateBarcodeCell) != null) {
+      plateBarcode = getCellValueAsString(plateBarcodeCell);
+    }
+    if (plateBarcode == null) {
+      throw new InputFormException("Cannot resolve plate barcode from: '" + getCellValueAsString(plateBarcodeCell) +"'");
+    }
+    else {
+      log.info("Got plate barcode: " + plateBarcode);
+    }
+
+    //process entries
+    Simple384WellPlate libraryPlate = null;
+    //Map<String, Pool<Plate<LinkedList<Library>, Library>>> pools = new HashMap<String, Pool<Plate<LinkedList<Library>, Library>>>();
+    Map<String, PlatePool> pools = new HashMap<String, PlatePool>();
+    for (int ri = 4; ri < rows; ri++) {
+      XSSFRow row = sheet.getRow(ri);
+
+      // Ax - plate position
+      XSSFCell platePosCell = row.getCell(0);
+      String platePos = getCellValueAsString(platePosCell);
+      if (platePos != null && libraryPlate == null) {
+        //plated libraries - process as plate
+        libraryPlate = new Simple384WellPlate();
+        libraryPlate.setIdentificationBarcode(plateBarcode);
+        libraryPlate.setCreationDate(new Date());
+      }
+
+      //cell defs
+      XSSFCell sampleAliasCell = row.getCell(1);
+
+      Sample s = null;
+      if (getCellValueAsString(sampleAliasCell) != null) {
+        String salias = getCellValueAsString(sampleAliasCell);
+        Collection<Sample> ss = manager.listSamplesByAlias(salias);
+        if (!ss.isEmpty()) {
+          if (ss.size() == 1) {
+            s = ss.iterator().next();
+            log.info("Got sample: " + s.getAlias());
+          }
+          else {
+            throw new InputFormException("Multiple samples retrieved with this alias: '"+salias+"'. Cannot process.");
+          }
+        }
+        else {
+          throw new InputFormException("No such sample '"+salias+"'in database. Samples need to be created before using the form input functionality");
+        }
+      }
+      else {
+        log.info("Blank sample row found. Ending import.");
+        break;
+      }
+
+      //sample OK - good to go
+      if (s != null) {
+        XSSFCell entityIDCell = row.getCell(2);
+        XSSFCell poolNumberCell = row.getCell(3);
+        XSSFCell sampleQcCell = row.getCell(4);
+        //XSSFCell sampleAmountCell = row.getCell(5);
+        //XSSFCell sampleWaterAmountCell = row.getCell(6);
+        XSSFCell barcodeKitCell = row.getCell(7);
+        XSSFCell barcodeTagsCell = row.getCell(8);
+        XSSFCell libraryQcCell = row.getCell(9);
+        XSSFCell libraryQcInsertSizeCell = row.getCell(10);
+        XSSFCell libraryQcMolarityCell = row.getCell(11);
+        XSSFCell libraryQcPassFailCell = row.getCell(12);
+        //XSSFCell libraryAmountCell = row.getCell(13);
+        //XSSFCell libraryWaterAmountCell = row.getCell(14);
+        //XSSFCell dilutionQcCell = row.getCell(15);
+        XSSFCell dilutionMolarityCell = row.getCell(16);
+        //XSSFCell dilutionAmountCell = row.getCell(17);
+        //XSSFCell dilutionWaterAmountCell = row.getCell(18);
+        XSSFCell poolQcCell = row.getCell(19);
+        //XSSFCell poolAverageInsertSizeCell = row.getCell(20);
+        XSSFCell poolConvertedMolarityCell = row.getCell(21);
+
+        //add pool, if any
+        if (getCellValueAsString(poolNumberCell) != null) {
+          String poolNum = getCellValueAsString(poolNumberCell);
+          if (!pools.containsKey(poolNum)) {
+            PlatePool pool = new PlatePool();
+            pool.setAlias(poolNum);
+            pool.setPlatformType(pt);
+            pool.setReadyToRun(true);
+            pool.setCreationDate(new Date());
+            pools.put(poolNum, pool);
+            log.info("Added pool: " + poolNum);
+          }
+        }
+
+        //process sample QC
+        if (getCellValueAsString(sampleQcCell) != null) {
+          try {
+            SampleQC sqc = new SampleQCImpl();
+            sqc.setSample(s);
+            sqc.setResults(Double.valueOf(getCellValueAsString(sampleQcCell)));
+            sqc.setQcCreator(u.getLoginName());
+            sqc.setQcDate(new Date());
+            sqc.setQcType(manager.getSampleQcTypeByName("Picogreen"));
+            if (!s.getSampleQCs().contains(sqc)) {
+              s.addQc(sqc);
+              log.info("Added sample QC: " + sqc.toString());
+            }
+          }
+          catch (NumberFormatException nfe) {
+            throw new InputFormException("Supplied Sample QC concentration for sample '"+getCellValueAsString(sampleAliasCell)+"' is invalid", nfe);
+          }
+        }
+
+        //if (getCellValueAsString(libraryQcCell) != null) {
+
+        if (getCellValueAsString(barcodeKitCell) != null && getCellValueAsString(barcodeTagsCell) != null) {
+          //create library
+          Library library = new LibraryImpl();
+          library.setSample(s);
+
+          Matcher mat = samplePattern.matcher(s.getAlias());
+          if (mat.matches()) {
+            String libAlias = plateBarcode+"_"+"L"+mat.group(2)+"-"+platePos+"_"+getCellValueAsString(entityIDCell);
+            //String libAlias = libraryNamingScheme.generateNameFor("alias", library);
+            //library.setAlias(libAlias);
+
+            library.setAlias(libAlias);
+            library.setSecurityProfile(s.getSecurityProfile());
+            library.setDescription(s.getDescription());
+            library.setCreationDate(new Date());
+            library.setPlatformName(pt.name());
+            library.setLibraryType(lt);
+            library.setLibrarySelectionType(ls);
+            library.setLibraryStrategyType(lst);
+            library.setPaired(paired);
+
+            if (getCellValueAsString(libraryQcMolarityCell) != null) {
+              int insertSize = 0;
+              try {
+                String bp = getCellValueAsString(libraryQcInsertSizeCell);
+                insertSize = Integer.valueOf(digitPattern.matcher(bp).group(1));
+              }
+              catch (NumberFormatException nfe) {
+                throw new InputFormException("Supplied Library insert size for library '"+libAlias+"' ("+s.getAlias()+") is invalid", nfe);
+              }
+
+              try {
+                LibraryQC lqc = new LibraryQCImpl();
+                lqc.setLibrary(library);
+                lqc.setInsertSize(insertSize);
+                lqc.setResults(Double.valueOf(getCellValueAsString(libraryQcMolarityCell)));
+                lqc.setQcCreator(u.getLoginName());
+                lqc.setQcDate(new Date());
+                lqc.setQcType(manager.getLibraryQcTypeByName("Bioanalyzer"));
+                if (!library.getLibraryQCs().contains(lqc)) {
+                  library.addQc(lqc);
+                  log.info("Added library QC: " + lqc.toString());
+                }
+
+                if (insertSize == 0 && lqc.getResults() == 0) {
+                  library.setQcPassed(false);
+                }
+                else {
+                  //TODO check libraryQcPassFailCell?
+                  library.setQcPassed(true);
+                }
+              }
+              catch (NumberFormatException nfe) {
+                throw new InputFormException("Supplied Library QC concentration for library '"+libAlias+"' ("+s.getAlias()+") is invalid", nfe);
+              }
+            }
+
+            if (getCellValueAsString(barcodeKitCell) != null) {
+              Collection<TagBarcode> bcs = manager.listAllTagBarcodesByStrategyName(getCellValueAsString(barcodeKitCell));
+              if (!bcs.isEmpty()) {
+                String tags = getCellValueAsString(barcodeTagsCell);
+                if (!"".equals(tags)) {
+                  HashMap<Integer, TagBarcode> tbs = new HashMap<Integer, TagBarcode>();
+                  if (tags.contains("-")) {
+                    String[] splits = tags.split("-");
+                    int count = 1;
+                    for (String tag : splits) {
+                      for (TagBarcode tb : bcs) {
+                        if (tb.getName().equals(tag)) {
+                          //set tag barcodes
+                          tbs.put(count, tb);
+                          count++;
+                        }
+                      }
+                    }
+                  }
+                  else {
+                    for (TagBarcode tb : bcs) {
+                      if (tb.getName().equals(tags) || tb.getSequence().equals(tags)) {
+                        //set tag barcode
+                        tbs.put(1, tb);
+                        log.info("Got tag barcode: " + tb.getName());
+                        break;
+                      }
+                    }
+                  }
+
+                  library.setTagBarcodes(tbs);
+                }
+                else {
+                  throw new InputFormException("Barcode Kit specified but no tag barcodes entered for: '"+s.getAlias()+"'.");
+                }
+              }
+              else {
+                throw new InputFormException("No tag barcodes associated with the kit definition '"+getCellValueAsString(barcodeKitCell)+"' for sample: '"+s.getAlias()+"'.");
+              }
+            }
+
+            /*
+            if (getCellValueAsString(dilutionMolarityCell) != null) {
+              try {
+                LibraryDilution ldi = new LibraryDilution();
+                ldi.setLibrary(library);
+                ldi.setSecurityProfile(library.getSecurityProfile());
+                ldi.setConcentration(Double.valueOf(getCellValueAsString(dilutionMolarityCell)));
+                ldi.setCreationDate(new Date());
+                ldi.setDilutionCreator(u.getLoginName());
+                if (!library.getLibraryDilutions().contains(ldi)) {
+                  library.addDilution(ldi);
+                  log.info("Added library dilution: " + ldi.toString());
+                }
+
+                if (getCellValueAsString(poolNumberCell) != null) {
+                  String poolNum = String.valueOf(new Double(getCellValueAsString(poolNumberCell)).intValue());
+                  Pool<Plate<LinkedList<Library>, Library>> p = pools.get(poolNum);
+                  if (p != null) {
+                    p.addPoolableElement(ldi);
+                    log.info("Added library dilution to pool: " + p.toString());
+                  }
+                }
+              }
+              catch (NumberFormatException nfe) {
+                throw new InputFormException("Supplied LibraryDilution concentration for library '"+libAlias+"' ("+s.getAlias()+") is invalid", nfe);
+              }
+            }
+            */
+
+            if (getCellValueAsString(poolConvertedMolarityCell) != null) {
+              String poolNum = getCellValueAsString(poolNumberCell);
+              Pool<Plate<LinkedList<Library>, Library>> p = pools.get(poolNum);
+              if (p != null) {
+                log.debug("Retrieved pool "+poolNum);
+                try {
+                  p.setConcentration(Double.valueOf(getCellValueAsString(poolConvertedMolarityCell)));
+                }
+                catch (NumberFormatException nfe) {
+                  throw new InputFormException("Supplied pool concentration for pool '"+poolNum+"' is invalid", nfe);
+                }
+              }
+            }
+
+            log.info("Added library: " + library.toString());
+
+            if (getCellValueAsString(platePosCell) != null && libraryPlate != null) {
+              //libraryPlate.setElement(getCellValueAsString(platePosCell), library);
+              libraryPlate.addElement(library);
+              log.info("Added library " + library.getAlias() + " to " + getCellValueAsString(platePosCell));
+            }
+
+            samples.add(s);
+
+            Pool<Plate<LinkedList<Library>, Library>> p = pools.get(getCellValueAsString(poolNumberCell));
+            if (p != null && !p.getPoolableElements().contains(libraryPlate)) {
+              p.addPoolableElement(libraryPlate);
+              log.info("Added plate to pool: " + p.toString());
+            }
+          }
+          else {
+            log.error("Cannot generate library alias from specified parent sample alias. Does it match the required schema?");
+          }
+        }
+      }
+    }
+    log.info("Done");
+    return pools;
+  }
+
+  //public static Map<String, Pool<Plate<LinkedList<Library>, Library>>> importPlateInputSpreadsheet(File inPath, User u, RequestManager manager, MisoNamingScheme<Library> libraryNamingScheme) throws Exception {
+  public static Map<String, PlatePool> importPlateInputSpreadsheet(File inPath, User u, RequestManager manager, MisoNamingScheme<Library> libraryNamingScheme) throws Exception {
+    if (inPath.getName().endsWith(".xlsx")) {
+      XSSFWorkbook wb = new XSSFWorkbook(new FileInputStream(inPath));
+      return process384PlateInputXLSX(wb, u, manager, libraryNamingScheme);
+    }
+    else if (inPath.getName().endsWith(".ods")) {
+      OdfSpreadsheetDocument oDoc = (OdfSpreadsheetDocument)OdfDocument.loadDocument(inPath);
+      return process384PlateInputODS(oDoc, u, manager, libraryNamingScheme);
+    }
+    else {
+      throw new UnsupportedOperationException("Cannot process bulk input files other than xls, xlsx, and ods.");
     }
   }
 
@@ -120,9 +859,13 @@ public class FormUtils {
     PlatformType pt = null;
     if (!"".equals(platformCell.getStringValue())) {
       pt = PlatformType.get(platformCell.getStringValue());
+    }
+    if (pt == null) {
+      throw new InputFormException("Cannot resolve Platform type from: '" + platformCell.getStringValue() +"'");
+    }
+    else {
       log.info("Got platform type: " + pt.getKey());
     }
-    if (pt == null) { throw new InputFormException("Cannot resolve Platform type from: '" + platformCell.getStringValue() +"'"); }
 
     OdfTableCell typeCell = oTable.getCellByPosition("C2");
     LibraryType lt = null;
@@ -132,29 +875,41 @@ public class FormUtils {
       String type = split[1];
       if (platformCell.getStringValue().equals(plat)) {
         lt = manager.getLibraryTypeByDescriptionAndPlatform(type, pt);
-        log.info("Got library type: " + lt.getDescription());
       }
       else {
         throw new InputFormException("Selected library type '"+typeCell.getStringValue()+"' doesn't match platform type: '" + platformCell.getStringValue() +"'");
       }
     }
-    if (lt == null) { throw new InputFormException("Cannot resolve Library type from: '" + typeCell.getStringValue() +"'"); }
+    if (lt == null) {
+      throw new InputFormException("Cannot resolve Library type from: '" + typeCell.getStringValue() +"'");
+    }
+    else {
+      log.info("Got library type: " + lt.getDescription());
+    }
 
     OdfTableCell selectionCell = oTable.getCellByPosition("D2");
     LibrarySelectionType ls = null;
     if (!"".equals(selectionCell.getStringValue())) {
       ls = manager.getLibrarySelectionTypeByName(selectionCell.getStringValue());
+    }
+    if (ls == null) {
+      throw new InputFormException("Cannot resolve Library Selection type from: '" + selectionCell.getStringValue() +"'");
+    }
+    else {
       log.info("Got library selection type: " + ls.getName());
     }
-    if (ls == null) { throw new InputFormException("Cannot resolve Library Selection type from: '" + selectionCell.getStringValue() +"'"); }
 
     OdfTableCell strategyCell = oTable.getCellByPosition("E2");
     LibraryStrategyType lst = null;
     if (!"".equals(strategyCell.getStringValue())) {
       lst = manager.getLibraryStrategyTypeByName(strategyCell.getStringValue());
+    }
+    if (lst == null) {
+      throw new InputFormException("Cannot resolve Library Strategy type from: '" + strategyCell.getStringValue() +"'");
+    }
+    else {
       log.info("Got library strategy type: " + lst.getName());
     }
-    if (lst == null) { throw new InputFormException("Cannot resolve Library Strategy type from: '" + strategyCell.getStringValue() +"'"); }
 
     //process entries
     Plate<LinkedList<Sample>, Sample> samplePlate = null;
@@ -211,14 +966,16 @@ public class FormUtils {
           OdfTableCell dilutionMolarityCell = oTable.getCellByPosition(15, ri);
           //OdfTableCell dilutionAmountCell = oTable.getCellByPosition(16, ri);
           //OdfTableCell dilutionWaterAmountCell = oTable.getCellByPosition(17, ri);
-          //OdfTableCell poolQcCell = oTable.getCellByPosition(18, ri);
+          OdfTableCell poolQcCell = oTable.getCellByPosition(18, ri);
           //OdfTableCell poolAverageInsertSizeCell = oTable.getCellByPosition(19, ri);
           OdfTableCell poolConvertedMolarityCell = oTable.getCellByPosition(20, ri);
 
           //add pool, if any
           if (!"".equals(poolNumberCell.getStringValue())) {
             if (!pools.containsKey(poolNumberCell.getStringValue())) {
-              pools.put(poolNumberCell.getStringValue(), new PoolImpl<Dilution>());
+              Pool<Dilution> pool = new PoolImpl<Dilution>();
+              pool.setAlias(poolNumberCell.getStringValue());
+              pools.put(poolNumberCell.getStringValue(), pool);
               log.info("Added pool: " + poolNumberCell.getStringValue());
             }
           }
@@ -262,7 +1019,8 @@ public class FormUtils {
             if (!"".equals(libraryQcMolarityCell.getStringValue())) {
               int insertSize = 0;
               try {
-                insertSize = Integer.valueOf(libraryQcInsertSizeCell.getStringValue());
+                String bp = libraryQcInsertSizeCell.getStringValue();
+                insertSize = Integer.valueOf(digitPattern.matcher(bp).group(1));
               }
               catch (NumberFormatException nfe) {
                 throw new InputFormException("Supplied Library insert size for library '"+libAlias+"' ("+s.getAlias()+") is invalid", nfe);
@@ -373,6 +1131,8 @@ public class FormUtils {
                 }
               }
             }
+
+            s.addLibrary(library);
           }
 
           samples.add(s);
@@ -401,9 +1161,13 @@ public class FormUtils {
     PlatformType pt = null;
     if (getCellValueAsString(platformCell) != null) {
       pt = PlatformType.get(getCellValueAsString(platformCell));
+    }
+    if (pt == null) {
+      throw new InputFormException("Cannot resolve Platform type from: '" + getCellValueAsString(platformCell) +"'");
+    }
+    else {
       log.info("Got platform type: " + pt.getKey());
     }
-    if (pt == null) { throw new InputFormException("Cannot resolve Platform type from: '" + getCellValueAsString(platformCell) +"'"); }
 
     XSSFCell typeCell = glrow.getCell(2);
     LibraryType lt = null;
@@ -413,29 +1177,41 @@ public class FormUtils {
       String type = split[1];
       if (getCellValueAsString(platformCell).equals(plat)) {
         lt = manager.getLibraryTypeByDescriptionAndPlatform(type, pt);
-        log.info("Got library type: " + lt.getDescription());
       }
       else {
         throw new InputFormException("Selected library type '"+getCellValueAsString(typeCell)+"' doesn't match platform type: '" + getCellValueAsString(platformCell) +"'");
       }
     }
-    if (lt == null) { throw new InputFormException("Cannot resolve Library type from: '" + getCellValueAsString(typeCell) +"'"); }
+    if (lt == null) {
+      throw new InputFormException("Cannot resolve Library type from: '" + getCellValueAsString(typeCell) +"'");
+    }
+    else {
+      log.info("Got library type: " + lt.getDescription());
+    }
 
     XSSFCell selectionCell = glrow.getCell(3);
     LibrarySelectionType ls = null;
     if (getCellValueAsString(selectionCell) != null) {
       ls = manager.getLibrarySelectionTypeByName(getCellValueAsString(selectionCell));
+    }
+    if (ls == null) {
+      throw new InputFormException("Cannot resolve Library Selection type from: '" + getCellValueAsString(selectionCell) +"'");
+    }
+    else {
       log.info("Got library selection type: " + ls.getName());
     }
-    if (ls == null) { throw new InputFormException("Cannot resolve Library Selection type from: '" + getCellValueAsString(selectionCell) +"'"); }
 
     XSSFCell strategyCell = glrow.getCell(4);
     LibraryStrategyType lst = null;
     if (getCellValueAsString(strategyCell) != null) {
       lst = manager.getLibraryStrategyTypeByName(getCellValueAsString(strategyCell));
+    }
+    if (lst == null) {
+      throw new InputFormException("Cannot resolve Library Strategy type from: '" + getCellValueAsString(strategyCell) +"'");
+    }
+    else {
       log.info("Got library strategy type: " + lst.getName());
     }
-    if (lst == null) { throw new InputFormException("Cannot resolve Library Strategy type from: '" + getCellValueAsString(strategyCell) +"'"); }
 
     //process entries
     Plate<LinkedList<Sample>, Sample> samplePlate = null;
@@ -494,7 +1270,7 @@ public class FormUtils {
         XSSFCell dilutionMolarityCell = row.getCell(15);
         //XSSFCell dilutionAmountCell = row.getCell(16);
         //XSSFCell dilutionWaterAmountCell = row.getCell(17);
-        //XSSFCell poolQcCell = row.getCell(18);
+        XSSFCell poolQcCell = row.getCell(18);
         //XSSFCell poolAverageInsertSizeCell = row.getCell(19);
         XSSFCell poolConvertedMolarityCell = row.getCell(20);
 
@@ -502,7 +1278,9 @@ public class FormUtils {
         if (getCellValueAsString(poolNumberCell) != null) {
           String poolNum = String.valueOf(new Double(getCellValueAsString(poolNumberCell)).intValue());
           if (!pools.containsKey(poolNum)) {
-            pools.put(poolNum, new PoolImpl<Dilution>());
+            Pool<Dilution> pool = new PoolImpl<Dilution>();
+            pool.setAlias(poolNum);
+            pools.put(poolNum, pool);
             log.info("Added pool: " + poolNum);
           }
         }
@@ -546,7 +1324,8 @@ public class FormUtils {
           if (getCellValueAsString(libraryQcMolarityCell) != null) {
             int insertSize = 0;
             try {
-              insertSize = new Double(getCellValueAsString(libraryQcInsertSizeCell)).intValue();
+              String bp = getCellValueAsString(libraryQcInsertSizeCell);
+              insertSize = Integer.valueOf(digitPattern.matcher(bp).group(1));
             }
             catch (NumberFormatException nfe) {
               throw new InputFormException("Supplied Library insert size for library '"+libAlias+"' ("+s.getAlias()+") is invalid", nfe);
